<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    tools:context="com.example.admin.figurasgeometrica.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/teal"
            android:gravity="center_horizontal"
            android:text="@string/figura"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cuadro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:checked="true"
                    android:text="@string/cuadro"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton
                    android:id="@+id/circulo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/circulo"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton
                    android:id="@+id/triangulo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="@string/triangulo"
                    android:onClick="onRadioButtonClicked"/>


                <RadioButton
                    android:id="@+id/cubo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cubo"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/calcular"
            android:background="@color/teal"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perimetro"
                android:id="@+id/cperimetro"
                android:onClick="mostrar1"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/area"
                android:id="@+id/carea"
                android:onClick="mostrar2"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volumen"
                android:id="@+id/cvolumen"/>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eCampo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eCampo1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Campo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/ejemplo1"
                android:inputType="numberDecimal"
                android:textColor="@color/red"
                android:textColorHint="@color/lavender"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/eCampo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eCampo2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Campo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/ejemplo1"
                android:inputType="numberDecimal"
                android:textColor="@color/red"
                android:textColorHint="@color/lavender"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eCampo3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eCampo3"
                android:visibility="invisible"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Campo3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/ejemplo1"
                android:inputType="numberDecimal"
                android:visibility="invisible"
                android:textColor="@color/red"
                android:textColorHint="@color/lavender"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/eCampo4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eCampo4"
                android:visibility="invisible"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Campo4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/ejemplo1"
                android:inputType="numberDecimal"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:textColorHint="@color/lavender"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bcalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orangered"
                android:onClick="calcular"
                android:text="@string/bcalcular"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/resultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultados"
            android:textColor="@color/olive"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>
